feat : #9 SecurityConfig cors 변경 및 로그인시 이름, 프로필 사진 업데이트 추가